<resources>
    <string name="app_name">Plogging</string>
    <string name="app_logo_image">app logo image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="tracking">Tracking</string>
    <string name="setting">Setting</string>
    <!--    Tracking Layout -->
    <string name="start_plogging_together">함께 플로깅 하기</string>
    <string name="in_progress">진행중인 플로깅</string>
    <string name="my_location">내 위치</string>
    <string name="restroom">화장실</string>
    <string name="tracking_noti_1">다른 사람과 함께하고 싶다면?</string>
    <string name="tracking_noti_2">진행중 마커를 길게 눌러보세요</string>
    <string name="start_plogging_alone">혼자 플로깅 하기</string>
    <string name="plogging_end">종료하기</string>
    <string name="tracking_time">경과 시간     %1$d : %1$d</string>
    <string name="tracking_distance">이동 거리     %1$d  KM</string>
    <!--    Setting Layout  -->
    <string name="user_profile_photo">user_profile_photo</string>
    <string name="thumbnail_photo">Thumbnail_photo</string>
    <string name="my_info">내 정보</string>
    <string name="auth">계정</string>
    <string name="logout">로그아웃</string>
    <string name="complete">완료</string>
    <string name="cancel">취소</string>
    <!--    Notification Channel    -->
    <string name="channel_name">Plogging 알림</string>
    <string name="channel_description">Plogging 상태를 알 수 있습니다.</string>
</resources>