<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.plogging.ui.tracking.TrackingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingFragment">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_ongoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_progress" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_my_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_location" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_toilet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewmodel.onClickChipRestroom()}"
                android:text="@string/restroom" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tv_notify_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="start"
            android:text="@string/tracking_noti_1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group" />

        <TextView
            android:id="@+id/tv_notify_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/tracking_noti_2"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tv_notify_1"
            app:layout_constraintStart_toStartOf="@id/tv_notify_1"
            app:layout_constraintTop_toBottomOf="@id/tv_notify_1" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/naver_map"
            android:name="com.naver.maps.map.MapFragment"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_notify_2"
            tools:layout="@layout/fragment_setting" />

        <Button
            android:id="@+id/btn_together"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_plogging_together"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="@{()->viewmodel.postRecode()}"
            app:layout_constraintEnd_toEndOf="@id/tv_notify_1"
            app:layout_constraintStart_toStartOf="@id/tv_notify_1"
            app:layout_constraintTop_toBottomOf="@id/naver_map" />

        <Button
            android:id="@+id/btn_along"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_plogging_alone"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/tv_notify_1"
            app:layout_constraintStart_toStartOf="@id/tv_notify_1"
            app:layout_constraintTop_toBottomOf="@id/btn_together" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>